# prelink-cross

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.cross  Makefile.am  README  configure.ac
doc/: Makefile.am  prelink.8
gelf/: Makefile.am
gelfx/: Makefile.am
m4/: libelf.m4
patches/: Makefile.am
src/: Makefile.am  arch-aarch64.c  arch-alpha.c  arch-arm.c  arch-cris.c  arch-i386.c  arch-mips.c  arch-ppc.c  arch-ppc64.c  arch-s390.c  arch-sh.c  arch-sparc64.c  arch-x86_64.c  cache.c  conflict.c  data.c  doit.c  dso-readonly.c  dso.c  dwarf2.c  elf.h  exec.c  execstack.c  gather.c  get.c  ld-libs.c  ld-lookup.c  main.c  prelink.c  prelink.h  reloc-info.h  reloc.c  space.c  undo.c  undoall.c  verify.c  wrap-file.c
src/rtld/: ChangeLog  Makefile.am  README-rtld  dl-hash.h  dl-load.c  dl-lookup.c  dl-lookupX.h  dl-misc.c  dl-object.c  dl-open.c  dl-tls.c  dl-version.c  rtld.c  rtld.h
testsuite/: .gitignore  Makefile.am  Makefile.in  cxx1.sh  cxx2.sh  cycle1.sh  deps1.sh  functions.sh  ifunc.h  layout1.sh  layout2.sh  movelibs.sh  order.c  order.sh  orderlib.c  orderlib.h  orderlib1.c  orderlib1.h  orderlib2.c  orderlib3.c  preload1.c  preload1.sh  preload1lib1.c  preload1lib2.c  quick1.sh  reloc10.sh  reloc11.sh  reloc12.c  reloc12.h  reloc12.sh  reloc12lib1.c  reloc12lib2.c  reloc2.sh  reloc3.sh  reloc4.sh  reloc5.c  reloc5.sh  reloc6.sh  reloc7.sh  reloc8.sh  (+15 more)
trunk/: ChangeLog  ChangeLog.cross  README.cross  config.h.in  configure.in
trunk/doc/: prelink.8
trunk/src/: Makefile.am  arch-alpha.c  arch-arm.c  arch-cris.c  arch-i386.c  arch-ia64.c  arch-mips.c  arch-ppc.c  arch-ppc64.c  arch-s390.c  arch-s390x.c  arch-sh.c  arch-sparc.c  arch-sparc64.c  arch-x86_64.c  cache.c  canonicalize.c  conflict.c  cxx.c  data.c  doit.c  dso-readonly.c  dso.c  dwarf2.c  elf.h  exec.c  execle_open.c  execstack.c  gather.c  get.c  layout.c  ld-do-lookup.h  ld-libs.c  ld-libs.h  main.c  prelink.c  prelink.h  reloc-info.c  space.c  undoall.c  (+2 more)
trunk/src/rtld/: ChangeLog  Makefile.am  README-rtld  dl-hash.h  dl-load.c  dl-lookup.c  dl-lookupX.h  dl-misc.c  dl-object.c  dl-tls.c  dl-version.c  ld-libs.h  ld-lookup.c  ld-lookup64.c  rtld.c  rtld.h
trunk/testsuite/: Makefile.am  Makefile.in  cxx1.sh  cxx2.sh  cxx3.sh  cycle1.sh  cycle2.sh  deps1.sh  deps2.sh  functions.sh  ifunc1.sh  ifunc2.sh  ifunc3.sh  layout1.sh  layout2.sh  movelibs.sh  preload1.h  quick1.sh  quick2.sh  quick3.sh  reloc1.sh  reloc10.sh  reloc11.sh  reloc2.sh  reloc3.sh  reloc4.sh  reloc5.c  reloc5.sh  reloc6.sh  reloc7.sh  reloc8.sh  reloc9.sh  shuffle1.sh  shuffle2.c  shuffle2.sh  shuffle3.sh  shuffle4.sh  shuffle5.sh  shuffle6.sh  shuffle7.sh  (+10 more)
